compile-tests/fixtures/compile-errors/register-invalid-number-params/input.ts
import { registerType } from "../../../../dist/typecheck.macro";
registerType();
